--- a/src/styles/scss/layout/_sidebar.scss
+++ b/src/styles/scss/layout/_sidebar.scss
@@ -1,9 +1,13 @@
-.layout_sidebar {
+.layout-sidebar {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    column-gap: $padding-l;
+    grid-template-columns: 1fr 4fr;
+    column-gap: $padding-s;
+    // padding-right: $padding-l;
 }
 
-.sidebar_container {
-
+.layout-right-sidebar {
+    display: grid;
+    grid-template-columns: 4fr 1.8fr;
+    column-gap: $padding-s;
+    padding-right: $padding-xl;
 }
