--- a/src/styles/scss/layout/_sidenav.scss
+++ b/src/styles/scss/layout/_sidenav.scss
@@ -1,4 +1,5 @@
 .sidenav_container {
+    width: auto;
     height: calc(96vh - $padding-xxl);
     margin: $padding-l 0 $padding-l $padding-l;
     background-color: #fff;
