--- a/src/styles/scss/component/_card.scss
+++ b/src/styles/scss/component/_card.scss
@@ -1,6 +1,5 @@
 .card-right-side {
-    // height: calc(93vh - $padding-xxl);
-    margin: $padding-l 0 $padding-l $padding-l;
+    width: auto;
     background-color: #fff;
     border-radius: $border-radius-m;
     padding: $padding-l;
@@ -9,25 +8,27 @@
 
 .container-card-2to1 {
     display: grid;
-    grid-template-columns: 1.8fr 1fr;
-    column-gap: $padding-s;
+    grid-template-columns: 1.9fr 1.1fr;
+    column-gap: $padding-l;
 }
 
 .container-card-1to2 {
     display: grid;
-    grid-template-columns: 1fr 1.8fr;
-    column-gap: $padding-s;
+    grid-template-columns: 1.9fr 1.1fr;
+    column-gap: $padding-l;
 }
 
 .container-card-3row {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: $padding-s;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    column-gap: $padding-l;
 }
 
 .card-bg {
+    width: auto;
     max-height: 100%;
-    margin: $padding-l 0 $padding-l $padding-l;
+    margin-bottom: $padding-l;
     background-color: #fff;
     border-radius: $border-radius-m;
     box-shadow: $box-shadow
