update side navbar and dashboard content - add bar and radial chart - update root and body css -

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -49,3 +49,5 @@ $font-size-md:                ($font-size-base * 1);
 $font-size-lg:                ($font-size-base * 1.25);
 $font-size-xl:                ($font-size-base * 1.5);
 $font-size-xxl:               ($font-size-base * 2);
+
+$icon-size-base: 1.5rem;
